# mauricio

./: .env.example  .env.librechat  .env.librechat.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: auto-improve-on-issue.yml  auto-merge-safe.yml  evals.yml
apps/backend/: Dockerfile  main.py
apps/backend/adapters/: whatsapp_evolution.py
apps/backend/api/: admin.py  audio_events.py  chat.py  voice.py  whatsapp.py
apps/backend/core/: config.py  json_utils.py  prompts.py
apps/backend/db/: models.py  repository.py  session.py
apps/backend/domain/: chat.py  knowledge.py  memory.py  model_gateway.py
apps/backend/eval/: cron.py  runner.py
apps/backend/gateways/: embeddings_gateway.py  litellm_gateway.py
apps/backend/scheduler/: main.py
apps/backend/services/: chat_service.py  feature_request_service.py  improvement_orchestrator.py  knowledge_service.py  memory_extractor.py  memory_service.py  router.py  summarizer.py  voice_orchestrator.py
apps/backend/tools/: base.py  chat_search.py  end_voice_chat.py  lamp.py  memory_edit.py  memory_list.py  note_add.py  note_list.py  note_read.py  propose_new_tool.py  registry.py  schedule_create.py  start_voice_chat.py  time_now.py  web_search.py
apps/voice-satellite/: run-local.sh  satellite.py  satellite.service
infra/: alembic.ini
infra/librechat/: librechat.yaml
infra/migrations/: env.py
infra/migrations/versions/: 0001_initial.py  0002_memory_and_knowledge.py  0003_memory_temporality.py  0004_satellite_state.py  0005_chat_external_id.py  0006_schedules.py
prompts/: home_assistant.md  memory_extraction.md  summarization.md  voice_chat.md  whatsapp.md
scripts/: deploy-satellite.sh  run_evals.sh
tests/: conftest.py
tests/integration/: test_voice_api.py
tests/unit/: test_chat_service.py  test_domain_models.py  test_embeddings_gateway.py  test_feature_request_service.py  test_knowledge_utils.py  test_memory_extractor.py  test_memory_service.py  test_repository.py  test_router.py  test_summarizer.py  test_tools.py  test_voice.py
(+2 files in other folders)
