# pyproject.toml
[project]
name = "personal-ai-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "litellm>=1.55.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "tavily-python>=0.5.0",
    "python-kasa>=0.7.0",
    "langfuse==2.55.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.6",
    "tiktoken>=0.8.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps"]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
[tool.ruff.lint.per-file-ignores]
# prompt strings can exceed line limit; zip strict not needed for equal-length lists
"apps/backend/services/memory_extractor.py" = ["E501"]
"apps/backend/services/summarizer.py" = ["E501"]
"apps/backend/services/knowledge_service.py" = ["B905"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
